--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -1,15 +1,72 @@
 {
-  "Menu": {
-    "About": "About",
-    "Events": "Events",
-    "SignUp": "Sign Up",
-    "login": "log in",
-    "logOut": "Log Out",
-    "Business": "Your Business",
-    "Support": "Support",
-    "AccountSet": "Account Settings",
-    "BusinessOwner": "FOR BUSINESS OWNER",
-    "language": "عربي",
-    "SwitchProfile": "Switch Profile"
+  "global": {
+    "submit": "Submit",
+    "Back": "Back"
+  },
+  "Login": {
+    "UserName": "User Name",
+    "Password": "Password",
+    "UserNamePlacholder": "Enter your User Name"
+  },
+  "CompanyProfile": {
+    "title": "Company Profile",
+    "Logo": "Logo",
+    "Name": "Name (unique)",
+    "NamePlacholder": "Enter your name",
+    "Email": "Email",
+    "UserName": "User Name",
+    "UserNamePlacholder": "Enter your User Name",
+    "EmailPlacholder": "Enter your email",
+    "Password": "Password",
+    "Address": "Address",
+    "AddressPlacholder": "1234 Main St",
+    "Contact": "Contact",
+    "ContactPersonal": "Contact Personal"
+  },
+  "Brands": {
+    "title": "Brands",
+    "add": "Add Brand",
+    "editBrand": "Edit Brand",
+    "Name": "Name",
+    "Address": "Address",
+    "Package": "Package",
+    "Edit": "Edit",
+    "Details": "Details",
+    "Delete": "Delete",
+    "BasicInfo": "Basic Info",
+    "NamePlacholder": "Enter brand name",
+    "AddressPlacholder": "1234 Main St",
+    "PackgeInfo": "Packge Info",
+    "UsedSMS": "Used SMS",
+    "UsedNotification": "Used Notification",
+    "UsedEmails": "Used Emails",
+    "RenewalDate": "Renewal Date"
+  },
+  "Branches": {
+    "title": "Branches",
+    "add": "Add Branch",
+    "editBranch": "Edit Branch",
+    "Name": "Name",
+    "Address": "Address",
+    "Package": "Package",
+    "Edit": "Edit",
+    "Details": "Details",
+    "Delete": "Delete",
+    "BasicInfo": "Basic Info",
+    "NamePlacholder": "Enter Branch name",
+    "AddressPlacholder": "1234 Main St",
+    "PackgeInfo": "Packge Info",
+    "UsedSMS": "Used SMS",
+    "UsedNotification": "Used Notification",
+    "UsedEmails": "Used Emails",
+    "RenewalDate": "Renewal Date",
+    "brandName": "Brand Name",
+    "brandPackage": "Brand Package",
+    "mainPackage": "Main Package",
+    "Router": "Router and access point data",
+    "IP": "IP",
+    "BrandName": "BrandName",
+    "BrandPackge": "BrandPackge",
+    "BranchPackge": "BranchPackge"
   }
 }
